# hpcv

./: CMakeLists.txt  README.md
bash/: build_arm64_android.sh  run_demo_android.sh
example/: CMakeLists.txt  test_cv.cc
include/: normalize.h
src/: CMakeLists.txt  normalize.cc
